--- a/FPSHorror/Config/DefaultEngine.ini
+++ b/FPSHorror/Config/DefaultEngine.ini
@@ -3,21 +3,6 @@
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
-LocalMapOptions=
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/FPSHorror.FPSHorrorGameMode
-GlobalDefaultServerGameMode=None
-
-
-
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPerson",NewGameName="/Script/FPSHorror")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/FPSHorror")
@@ -79,5 +64,18 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+LocalMapOptions=
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+ServerDefaultMap=/Engine/Maps/Entry
+GlobalDefaultGameMode=/Game/Blueprints/BP_MyGameMode.BP_MyGameMode_C
+GlobalDefaultServerGameMode=None
 
 
