Waypoint system is fully set up and ready to go. Just need to populate Billys Scene now.

--- a/FPSHorror/.gitignore
+++ b/FPSHorror/.gitignore
@@ -60,3 +60,4 @@ DerivedDataCache/*
 Content/InfinityBladeIceLands/*
 Content/Environment/*
 Content/InfinityBladeGrassLands/*
+Content/InfinityBladeWeapons/*
