LOTS of additions. You will need to add the  InfinityBlade: Effects asset pack to your project to see the proper lighting for the town with the fire and torches. - Populated Billys SceneWithAssets with 12 Peasants and about 12 Guards - Turned Billys SceneWithAssets into a dusk/late evening scene - Split up the FPS arms animations into 3 different ones: Idle, Walk and Attacks - Tagged the FPS Character as 'Player' for AI purposes - Made the appropriate changes to the gitignore so do not worry about the Effects pack

--- a/FPSHorror/.gitignore
+++ b/FPSHorror/.gitignore
@@ -61,3 +61,4 @@ Content/InfinityBladeIceLands/*
 Content/Environment/*
 Content/InfinityBladeGrassLands/*
 Content/InfinityBladeWeapons/*
+Content/InfinityBladeEffects/*
