--- a/FPSHorror/.gitignore
+++ b/FPSHorror/.gitignore
@@ -59,3 +59,6 @@ DerivedDataCache/*
 
 Content/InfinityBladeIceLands/*
 Content/Environment/*
+Content/InfinityBladeGrassLands/*
+Content/InfinityBladeWeapons/*
+Content/InfinityBladeEffects/*
